[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-motion-planning"
version = "2.0"
description = "Motion planning algorithms for Python"
maintainers = [
    {name = "Yang Haodong", email = "913982779@qq.com"},
    {name = "Wu Maojia", email = "2223942063@qq.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "cvxopt",
    "osqp",
    "tqdm",
    "tensorboard==2.12.0"
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/ai-winter/python_motion_planning"

[tool.setuptools.packages.find]
where = ["src"]